# NebusTest

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_payments_and_outbox.py
app/: main.py  webhook_echo.py
app/application/: __init__.py  commands.py  exceptions.py  fingerprint.py  gateway.py  idempotency.py  outbox.py  ports.py  services.py  webhooks.py
app/core/: config.py  logging.py
app/domain/: __init__.py  exceptions.py  payment.py
app/infrastructure/db/: __init__.py  models.py  repositories.py  session.py  uow.py
app/infrastructure/http/: __init__.py  gateway.py  webhook.py
app/infrastructure/messaging/: __init__.py  broker.py  consumer.py  outbox_runner.py  outbox_worker.py  publisher.py  retry.py  retry_router.py  topology.py
app/presentation/: dependencies.py  exception_handlers.py  services.py
app/presentation/api/v1/: payments.py
app/schemas/: __init__.py  payments.py
tests/: test_api_payments.py  test_application_services.py  test_config.py  test_consumer_handler.py  test_domain_payment.py  test_health.py  test_logging.py  test_messaging.py  test_persistence.py  test_webhook_echo.py
